src/linter/checks/snapshots/notabene__linter__checks__links__tests__link_reference_does_not_exist-2.snap
---
source: src/linter/checks/links.rs
expression: "lint(&changelog, &ruleset)"
---
- rule: LinkReferenceDoesNotExist
  span:
    start: 1
    end: 18446744073709551615
  path: ~
