src/linter/checks/snapshots/notabene__linter__checks__links__tests__undefined_link_reference-2.snap
---
source: src/linter/checks/links.rs
expression: linter.lint(&changelog)
---
- rule: UndefinedLinkReference
  location:
    start: 1
    end: 18446744073709551615
  path: ~
